[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Weapons/Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/FSM.gd" type="Script" id=5]
[ext_resource path="res://UI/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/PlayerActionFSM.gd" type="Script" id=7]
[ext_resource path="res://Player/Camera.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.510082, 0.151404, 0.552754 )

[sub_resource type="CapsuleMesh" id=3]
radius = 0.5

[sub_resource type="SpatialMaterial" id=4]
flags_world_triplanar = true
albedo_texture = ExtResource( 2 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
uv1_triplanar = true

[sub_resource type="Animation" id=5]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.994114, 0 )
collision_layer = 2
script = ExtResource( 1 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 5 )

[node name="PlayerActionFSM" type="Node" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.612934, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Camera" parent="Pivot" instance=ExtResource( 8 )]
cull_mask = 1048573

[node name="Hand" parent="Pivot" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.318559, -0.333248, -0.523965 )

[node name="GrabCast" type="RayCast" parent="Pivot"]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 16

[node name="GroundRaycasts" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="GroundRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.448863, -0.711921, -0.0237207 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="RayCast5" type="RayCast" parent="GroundRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00789258, -0.711921, 0.00153909 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="RayCast2" type="RayCast" parent="GroundRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.46638, -0.711921, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="RayCast3" type="RayCast" parent="GroundRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0414319, -0.711921, -0.510737 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="RayCast4" type="RayCast" parent="GroundRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0414319, -0.711921, 0.507558 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]

[node name="I_Frames" type="Timer" parent="."]
one_shot = true

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
autoplay = "None"
anims/Invincible = SubResource( 5 )
anims/None = SubResource( 6 )

[connection signal="animation_finished" from="HUD/AnimationPlayer" to="." method="_on_HUD_animation_finished"]
[connection signal="timeout" from="I_Frames" to="." method="_on_I_Frames_timeout"]

[editable path="HUD"]
